<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUpViewModel"
            type="com.demo.quickadvice.ui.viewmodels.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_up_bg"
        tools:context=".ui.activities.SignUpActivity">

        <TextView
            android:id="@+id/signup_tv_header"
            style="@style/standard_white_text_style_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/register_yourself"
            android:textSize="@dimen/login_header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_up_details_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/sign_up_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_tv_header">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_up_et_username"
                style="@style/login_fields_text_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/username"
                android:text="@={signUpViewModel.MName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_up_et_email"
                style="@style/login_fields_text_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:text="@={signUpViewModel.mEmail}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_et_username" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_up_et_mobile"
                style="@style/login_fields_text_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/mobile_number"
                android:text="@={signUpViewModel.mMobileNum}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_et_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_up_et_dob"
                style="@style/login_fields_text_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:focusableInTouchMode="false"
                android:hint="@string/date_of_birth"
                android:text="@={signUpViewModel.mDoB}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_et_mobile" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_up_et_password"
                style="@style/login_fields_text_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:text="@={signUpViewModel.mPassword}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_et_dob" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_up_et_confirm_password"
                style="@style/login_fields_text_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/confirm_password"
                android:text="@={signUpViewModel.mConfirmPassword}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_et_password" />

            <TextView
                android:id="@+id/sign_up_txt_user_type"
                style="@style/login_fields_text_style"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:text="@string/are_you_registering_as_an_expert"
                app:layout_constraintEnd_toStartOf="@id/sign_up_user_type_check_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_et_confirm_password" />

            <CheckBox
                android:id="@+id/sign_up_user_type_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:checked="@={signUpViewModel.mUserIsExpert}"
                app:layout_constraintBottom_toBottomOf="@id/sign_up_txt_user_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/sign_up_txt_user_type" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_up_category_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/sign_up_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_tv_header"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/sign_up_category_header"
                style="@style/login_fields_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up_category_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_category_close_icon" />

            <ImageButton
                android:id="@+id/sign_up_category_close_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_category_header">

                <LinearLayout
                    android:id="@+id/sign_up_category_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical" />
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/sign_up_btn"
            style="@style/standard_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> signUpViewModel.onSignUpClicked()}"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>