<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.demo.quickadvice.ui.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/base_bg"
        tools:context=".ui.activities.LoginActivity">

        <TextView
            android:id="@+id/login_header"
            style="@style/standard_white_text_style_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/login"
            android:textSize="@dimen/login_header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toTopOf="@id/login_btn_enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_header">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_et_username"
                style="@style/login_fields_text_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/username"
                android:text="@={loginViewModel.MUserName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/login_fields_text_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:text="@={loginViewModel.mPassword}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_et_username" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/login_btn_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> loginViewModel.onLoginClicked()}"
            android:text="@string/login"
            style="@style/standard_button_style"
            app:layout_constraintBottom_toTopOf="@id/login_tv_signup"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/login_tv_signup"
            style="@style/standard_white_text_style_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/dont_have_account_sign_up"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>